# agent-gaurd

./: .agentra.yml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  initial-prompt.md  pyproject.toml
.agentra/reports/: benchmark-report.html  benchmark-report.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_policy.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
agent_guard/: __init__.py  models.py
agent_guard/adapters/: agents.py
agent_guard/benchmarks/: runner.py
agent_guard/cli/: main.py
agent_guard/compliance/: engine.py
agent_guard/detection/: engine.py
agent_guard/execution/: engine.py
agent_guard/governance/: engine.py  policies.py
agent_guard/onboarding/: engine.py
agent_guard/optimizer/: engine.py
agent_guard/renderers/: html.py  markdown.py
agent_guard/risk/: engine.py
agent_guard/skills/: registry.py
agent_guard/telemetry/: audit.py
agentra/: __init__.py  models.py
agentra/adapters/: agents.py
agentra/benchmarks/: runner.py
agentra/cli/: main.py
agentra/compliance/: engine.py
agentra/detection/: engine.py
agentra/execution/: engine.py
agentra/governance/: engine.py  policies.py
agentra/hooks/: __init__.py  ci.py  git.py
agentra/index/: __init__.py  engine.py  graph.py
agentra/onboarding/: engine.py
agentra/optimizer/: engine.py
agentra/plugin/: __init__.py  generator.py
agentra/rag/: __init__.py  engine.py  patterns.py
agentra/renderers/: graph_html.py  html.py  markdown.py
agentra/risk/: engine.py
agentra/scanner/: __init__.py  deps.py  engine.py  owasp.py  sast.py
agentra/skills/: registry.py
agentra/telemetry/: audit.py
docs/: code-graph.html  index.html  index.md  whats-new-0.3.2.html
tests/: test_adapters.py  test_benchmarks.py  test_detection.py  test_execution.py  test_governance.py  test_graph.py  test_onboarding.py  test_optimizer.py  test_plugin.py  test_rag.py  test_scanner.py  test_skills.py
