[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-gaurd"
version = "0.1.0"
description = "Enterprise AI Engineering Control Plane — secure, token-optimized, context-aware governance for coding agents."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Arijeet Ganguli", email = "arijeetganguli@yahoo.com"},
]
keywords = ["ai", "agents", "governance", "devsecops", "security", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "ruamel.yaml>=0.18,<1",
    "Jinja2>=3.1,<4",
    "markdown-it-py>=3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
ag = "agent_guard.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_guard*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
